--- a/TangPoetryAnalysis/pom.xml
+++ b/TangPoetryAnalysis/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>spark-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <!--String -> object / object-.String 的工具-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 
         <!--网页解析工具: 用来做网页分析-->
         <dependency>
